# Unity-MCP

./: .gitignore  README.md
.github/workflows/: publish-pypi.yml
Python/: .gitignore  README.md  pyproject.toml  setup.py
Python/unity_mcp_server/: __init__.py  __main__.py  cli.py  downloader.py  platform.py
Unity-MCP-Plugin/Assets/root/: package.json
