[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-mcp-server"
version = "0.1.0"
description = "Python wrapper and downloader for Unity MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ivan Murzak", email = "ivan.murzak@gmail.com"}
]
keywords = ["unity", "mcp", "model-context-protocol", "game-engine", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Minimal dependencies - uses standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
unity-mcp = "unity_mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/ivanmurzak/unity-mcp"
Documentation = "https://github.com/ivanmurzak/unity-mcp#readme"
Repository = "https://github.com/ivanmurzak/unity-mcp"
Issues = "https://github.com/ivanmurzak/unity-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["unity_mcp_server*"]

[tool.setuptools.package-data]
unity_mcp_server = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
